--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -9,6 +9,7 @@ html, body{
     margin:0;
     padding:0;
     height:100%;
+    scroll-behavior: smooth;
     /*perspective: 700px;*/
 }
 
@@ -23,11 +24,42 @@ body{
 }
 /*reset*/
 
+
+/*Scrollbar*/
+/* width */
+::-webkit-scrollbar {
+  width: 1vw;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #cd393961; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2ae8a299; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3c8ede; 
+}
  nav{
   display:none;
 }
 
+.fa-home{
+transition:2S;
+}
+.fa-home:hover{
+color:white;
+}
 
+.fa-link:before, 
+.fa-chain:before {
+    content: none !important;;
+}
 
 .mobile-background {
   position: fixed;
@@ -131,7 +163,7 @@ body{
 .faDescribe{
   margin: 0%;
   font-family:Quicksand;
-  font-size: 3em;
+  font-size: 3vh;
   color:black/*#064273*/;
   font-weight: bold;
   width:100%;
@@ -146,6 +178,8 @@ body{
   align-self: center;
   text-align: justify;
   font-family: quicksand;
+  flex-direction: column;
+  font-size:3vh;
 }
 
 .fa-item{
@@ -154,7 +188,13 @@ body{
   margin-bottom:10%;
 }
 
-
+.fa-item-home{
+    margin: 0% 3% !important;
+    display: flex;
+    flex-direction: column;
+    min-width: 0px !important;
+    font-size: 3.5vw;
+}
 
 
 
@@ -172,7 +212,8 @@ div > .fa{
 
 
 .header .fa:link{
-
+font-size: 9vh;
+}
 }
 .header .fa:visited{
 
@@ -192,7 +233,7 @@ h1{
   display:flex;
   margin: 0% 0% 0% 0%;
   font-family:raleway,Quicksand, Helvetica;
-  font-size: 3em;
+  font-size: 5vh;
   color: hsla(111, 12%, 19%, 0.8)/* #188d9d*/ /*, #468189/*,#064273*//*#fffffff0*/;
   padding: 0% 0% 0% 0%;
   font-weight: bolder;
@@ -234,17 +275,45 @@ h1{
   display: flex;
   font-family: Quicksand;
   justify-content: center;
+  height:60vh;
+  width:100vw;
 }
 .displayArea p{
-  margin: 0px;
+  margin: 0px 0px 0px 3%;
   font-family: 'Quicksand';
-  font-size: 1em;
-  color: white;
+  font-size: 3.5vh;
+  color: hsla(111, 12%, 19%, 0.8);
+  font-weight: bold;
 }
 .displayArea h2, .displayArea h3{
-  text-align: center;
-  margin:10% 0px 0px 0px;
+  /*text-align: center;*/
+  margin:0% 0px 0px 0px;
+  font-size: 3vh;
+  color: cornsilk;
 }
+.displayHome{
+  flex-direction: row;
+  flex-wrap: wrap;
+  width:100vw;
+  justify-content: center;
+  align-self: flex-start;
+}
+.displayHome p{
+  font-size:2.5vh;
+}
+.pitch{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin:9% 0 0 0;
+}
+
+
+
+#resumeSquare{
+  width: 99vw;
+}
+
 #self-taught{
   color:navy;
 }
@@ -256,8 +325,8 @@ ul{
   display: flex;
 }
 .image-row-item{
-  height:4em;
-  width:4em;
+  height:10vh;
+  width:10vh;
 }
 
 
@@ -271,14 +340,44 @@ ul{
   width:100vw;
 }
 
-
+li{
+    display: flex;
+    width: fit-content;
+    border: 2px solid white;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1%;
+    border-radius: 15px;
+    padding: 2%;
+    font-weight: bold;
+    background-color: #f0f8ff4f;
+    transition: 500ms;
+}
+li:hover{
+    border:4px dotted #e0ef0061;
+    background-color: #31e7824f;
+}
+li p{
+  color:black !important;
+}
+li p:hover{
+  color:white !important;
+}
 ul{
-   list-style-position:  inside; 
-   list-style-type:none;
-   color:black /*#468189/*#064273*/;
-   text-align:center;
-   font-weight: none;
-   display:inline;
+    list-style-position: inside;
+    list-style-type: none;
+    color: black /*#468189/*#064273*/;
+    text-align: center;
+    font-weight: none;
+    font-size: 3.5vh;
+    margin: 0% !important;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+    padding: 0px;
+
 }
 
 ul a {
@@ -292,14 +391,20 @@ ul a:hover{
 
 
  div.thumb{
-   width:43%;
-   max-height:160px;
+   width:90%;
+   /*max-height:160px;*/
    /*background-color: white; */
    /*box-shadow: 3px 3px 5px 6px #bbb;*/
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
-   /*margin: 25% auto 5%;*/
+   margin: 0% auto 5%;
    border-radius: 10px;
    display: block;
+   transition: 2s ease-out;
+
+ }
+ div.thumb:hover{
+  background-color: #0780fd78;
+  
  }
 
  div.info-container{
@@ -312,7 +417,7 @@ ul a:hover{
  img{
     display: block;
     width: 100%;
-    opacity: .8;
+    opacity: .9;
     height: 100%;
     margin: 0% auto 0;
     border-radius: 8px 8px 0px 0px;
@@ -386,58 +491,31 @@ button:active{
   background:rgba(20,224,133,1);
 }
 */
-
-.button {
-  position: relative;
-  background: #031926;
-  /*bottom:2%;
-  right:2%;*/
-  margin: 0% auto;
-  width : 200px;
-  height : 50px;
-  overflow: hidden;
-  text-align : center;
-  transition : .2s;
-  cursor : pointer;
-  border-radius: 3px;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.2);
-}
-.btnTwo {
-  position : relative;
-  width : 200px;
-  height : 100px;
-  margin-top: -100px;
-  padding-top: 2px;
-  background : #F4E9CD/*#26A69A*/;
-  left : -250px;
-  transition : .3s;
-}
-.btnText {
-  color : #F4E9CD;
-  transition : .3s;
-}
-.btnText2 {
-  margin-top : 63px;
-  margin-right : -130px;
-  color : #031926;
-}
-.button:hover .btnTwo{ /*When hovering over .button change .btnTwo*/
-  left: -130px;
-}
-.button:hover .btnText{ /*When hovering over .button change .btnText*/
-  margin-left : 65px;
-}
-.button:active { /*Clicked and held*/
-  box-shadow: 0px 5px 6px rgba(0,0,0,0.3);
+.downloadBtn {
+    color: #e7f7effa !important;
+    text-transform: uppercase;
+    background: #ffffff00;
+    padding: 20px;
+    border: 4px solid #ffbd02 !important;
+    border-radius: 6px;
+    display: inline-block;
+    font-family: Quicksand;
+    font-weight: bold;
+    font-size: 2.5vh;
+    transition: all 1s ease 0s;
 }
 
-/*ul{
-  color:black;
-}*/
+.downloadBtn:hover {
+color: #03fbc2!important;
+border-radius: 50px;
+border-color: #03fbc2!important;
+background:#000000;
+}
 
 #resume{
-  width:60%;
+  width:75vw;
   margin-top: 5%;
+  height: 120vw;
 }
 
 
@@ -453,20 +531,227 @@ button:active{
   /*background-color: rgba(6,3,170,0.3);*/
   /*background-color: rgba(127,205,255,0.5);*/
   background-color: #fd780b87;
-  height:24vw;
+  height:13vw;
   width:0;
   flex:1;
-  border:#ffffff1f 1px solid;
+  border:#d88b4e00 1px solid;
   /*border-color: rgba(219, 142, 100, 0.21);*/
+  transition: 1s;
   
 }
+.about-item:hover{
+  background-color: #0780fd78;
+}
+
+/*arrowBounce{
+  -webkit-animation: bounce-top 5s infinite ;
+          animation: bounce-top 5s infinite ;
+}
+@-webkit-keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+            transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+            transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+            transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+            transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+            transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+}
+@keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+            transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+            transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+            transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+            transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+            transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+}
+*/
+
+a.about-item{
+  position:relative;
+}
+a.about-item:before{
+  content:'';
+  position:absolute;
+  top:-2px;
+  left:-2px;
+  width:0;
+  height:0;
+  background:transparent;
+  border:2px solid transparent;
+}
+a.about-item:hover:before{
+  animation:borderCrawl 1s linear forwards;
+}
+@keyframes borderCrawl{
+  0%{
+    width:0;
+    height:0;
+    border-top-color:black;
+    border-bottom-color:transparent;
+    border-left-color:transparent;
+    border-right-color:transparent;
+  }
+  50%{
+    width:100%;
+    height:0;
+    border-top-color:black;
+    border-bottom-color:transparent;
+    border-left-color:transparent;
+    border-right-color:black;
+  }
+  100%{
+    width:100%;
+    height:100%;
+    border-top-color:black;
+    border-bottom-color:transparent;
+    border-left-color:transparent;
+    border-right-color:black;
+  }
+}
+
+a.about-item:after{
+  content:'';
+  position:absolute;
+  top:-2px;
+  left:-2px;
+  width:0;
+  height:0;
+  background:transparent;
+  border: 2px solid transparent;
+}
+a.about-item:hover:after{
+  animation: borderCrawl2 1s linear forwards;
+  animation-delay: 1s;
+}
+@keyframes borderCrawl2{
+    0%{
+    width:0;
+    height:0;
+    border-top-color:transparent;
+    border-bottom-color:transparent;
+    border-left-color:black;
+    border-right-color:transparent;
+  }
+  50%{
+    width:0;
+    height:100%;
+    border-top-color:transparent;
+    border-bottom-color:black;
+    border-left-color:black;
+    border-right-color:transparent;
+  }
+  100%{
+    width:100%;
+    height:100%;
+    border-top-color:transparent;
+    border-bottom-color:black;
+    border-left-color:black;
+    border-right-color:transparent;
+  }
+}
+
+
+
+
+
+
+
+
+
 
 .about-item > h1{
   width: 100%;
   color:white, #3b5c91;
   font-family: 'Quicksand';
   display:flex;
-  font-size: 1.1em;
+  font-size: 4.5vw;
   align-items: center;
   justify-content: center;
   /* this worked ^ because the parent is also display flex */
@@ -485,12 +770,31 @@ a.about-item > div{
 
 a{
   text-decoration: none;
+  color:black;
 }
+a.fa-link{
+  display: flex;
+  flex-direction: column;
+}
+
+a.fcc-link{
+  font-size:2.5vh;
+  text-align: center;
+  margin-top:0.5em;
+  font-family: quicksand;
+  font-weight: bold;
+}
+
+a.fcc-link:hover{
+  color:#fd780bb5;
+}
+
+
 
 .displayArea{
   /* background-color:rgba(0,0,0,0.3); */
-  height:50%;
-  width:100%;
+  height:62%;
+  width:98%;
 }
 /*
 .displayArea div{
@@ -499,32 +803,265 @@ a{
 
 .displayAreaItem{
   display:none;
+  overflow: auto;
+  overflow-x: hidden;
+  width: 99vw;
 }
 
+#contact{
+
+}
+.fa-container2{
+display: flex;
+flex-direction: column;
+width: 100vw;
+text-align: center;
+}
+.fa-item2{
+margin-bottom:9%;
+}
+.faDescribe2{
+    text-align: center;
+    margin: 6%;
+    width: 100vw;
+}
+
+.faDescribe3{
+}
+
+.contactLink{
+  transition: 1s;
+}
+
+.contactLink:hover{
+  color:white;
+}
+.fa2{
+  color:#0080f1b0 !important;
+  transition: 1s;
+}
+.fa2:hover{
+  color:#fd780bb5 !important;
+}
 
 #folio{
   flex-direction: row;
   justify-content: space-around;
   align-items:center;
-  flex-wrap:wrap;"
+  flex-wrap:wrap;
+}
+.row > .column{
+  padding: 0 8px;
+}
+.row:after{
+  content:"";
+  display:table;
+  clear:both;
+}
+
+
+.row{
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+  align-items: self-end;
+}
+
+.column{
+  width:90%;
+  margin-bottom: 1em;
+}
+
+.hover-shadow{
+  border-radius: 8px;
+}
+
+.modal{
+  /*display:none;*/
+  position:fixed;
+  z-index:1;
+  padding-top:100px;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  overflow:auto;
+  background-color: rgba(0,0,0,.85);
+}
+
+/*Modal content*/
+.modal-content{
+  position:relative;
+  /*background-color: #fefefe;*/
+  margin:1% auto;
+  padding:0;
+  width:100vw !important;
+  max-width:65vw;
+}
+
+/*The Close Button*/
+.close{
+  color:white;
+  position:absolute;
+  top:10px;
+  right:25px;
+  font-size:10vw;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus{
+  color:#999;
+  text-decoration: none;
+  cursor:pointer;
+}
+
+/*Hide the slides by default*/
+
+.mySlides{
+  display:none;
+  height:100%;
+}
+
+/*Image when lightbox is opened*/
+.algLightB{
+  height:50vh;
+  width:65hw !important;
+}
+
+
+/*Next and Previous buttons*/
+.prev, .next{
+  cursor:pointer;
+  position: absolute;
+  top:15%;
+  width:auto;
+  padding:16px;
+  margin-top:-50px;
+  color:white;
+  font-weight: bold;
+  font-size:20px;
+  transition:0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select:none;
+  -webkit-user-select:none;
+}
+
+/*Position the "next button" to the right*/
+.next{
+  right:0;
+  border-radius: 3px 0 0 3px;
+}
+
+/*On hover, add a black background color with a little bit of see-though*/
+.prev:hover, .next:hover{
+  background-color: rgba(0,0,0,.7);
+}
+
+.numbertext{
+  color:#f2f2f2;
+  font-size:12px;
+  padding:8px 12px;
+  position:absolute;
+  top:0;
+}
+
+
+.caption-container{
+  text-align:center;
+  background-color:black;
+  padding:2px 16px;
+  color:white;
+}
+
+img.demo{
+  opacity:0.6;
+}
+
+.active,.demo:hover{
+  opacity:1;
+}
+
+img.hover-shadow{
+  transition: 0.3s;
+}
+
+.hover-shadow:hover{
+  box-shadow:0 4px 8px 0 rgba(0,0,0,0.8), 0 6px 20px 0 rgba(0,0,0,0.8);
 }
 
 
 
 
+#myModal{
+  display:none;
+}
+
+
+#lightbox-container{
+  display:flex;
+}
+
+.small{
+  font-size:2.5vh !important;
+  width:24vw;
+  color:black !important;
+}
+.small a{
+  transition:ease 1s;
+}
+.small a:hover{
+  color:white;
+}
+.small1{
+  font-size: 3vh !important;
+}
+
+
+.algorithmPrints{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+    height: 29vh;
+    margin-left: 0vw;
+    margin-top:10%;
+}
 
 
 
+
+/*Landscape*/
+@media only screen and (max-height: 450px){
+    .header{
+      height:250vh;
+    }    
+    .about-item{
+      height:15vh;
+    }
+
+    ul{
+  font-size: 3.5vw;
+
+    }
+  .displayArea h2, .displayArea h3 {
+    font-size: 4vh;
+    }
+  .image-row-item {
+    height: 10vw;
+    width: 10vw;
+    }
+
+
+
+}
 
 
 
 
 /*between phone*/
 @media only screen and (min-width: 460px){
-
-
-
-
 
 
 }
@@ -566,15 +1103,19 @@ a{
 
     .navLeft{
     }
-    div.navLeft a{
-      font-size:3em;
-      color:rgba(66,47,127,.7);
-      font-family: Quicksand;
+    div.navLeft h1{
+     display: inline-flex;
+     font-family: raleway;
+     font-size: 6vh;
+     color: hsla(111, 12%, 19%, 0.8) !important/* #188d9d*/ /*, #468189/*,#064273*//*#fffffff0*/;
+     font-weight: bolder;
+     padding-top: 0px;
+     margin:0px;
     }
     .navRight{
       display:inline;
       float: right;
-      font-size:2em;
+      font-size:4vh;
       font-family: muli,monospace;
     }
     .nav-item{
@@ -585,7 +1126,7 @@ a{
 
     .nav-item > a {
       text-decoration: none;
-      color:rgba(66,47,127,.7);
+      color:hsla(111, 12%, 19%, 0.8);
       font-family: Quicksand;
       margin-right:.5em;
     }
@@ -593,7 +1134,8 @@ a{
     div.navLeft p{
      margin:0px;
      font-family:Quicksand;
-     font-size:1.5em;
+     font-size:3vh;
+     text-align:center;
     }
 
     .mobile-background {
@@ -634,12 +1176,11 @@ ul{
    list-style-position:  inside; 
    list-style-type:none;
    font-family: Quicksand;
-   font-size: 1.5em;
-   color:black /*#F4E9CD/*#468189/* #064273*/;
+   color:black /*#F4E9CD/*#468189/* #064273;
    text-align:center;
    font-weight: none;
-   margin-bottom:35%;
-   display:inline;
+  /* margin-bottom:35%;*/
+   
 }
 
 ul a:hover {
@@ -648,10 +1189,7 @@ ul a:hover {
 }
 
 div.thumb{
-  max-height: none;
-  min-width:22%;
-  margin:0% 1em 0%;
-  min-height: 36%;
+width:30%;
 }
 
 
@@ -664,11 +1202,6 @@ div.thumb{
 
 .fa-container{
   display:flex;
-  /*align-items: center;*/
-  /*height:100vh;*/
-  /*flex-direction:row;*/
-  /*flex-wrap:wrap;*/
-  /*justify-content: center;*/
   padding:0%;
   padding-top:14%;
 }
@@ -679,12 +1212,14 @@ div.thumb{
   width:100%;
 }
 .faDescribe2{
-  width:75%;
   color:black;
-  font-size: 2em;
+  font-size: 3.25vh;
   font-family:Quicksand;
   font-weight:normal;
   text-align: center;
+  margin: 2%;
+  width: 75vw;
+
 }
 
 .fa-item{
@@ -692,8 +1227,13 @@ div.thumb{
   min-width:50%;
 }
 
+.fa-item-home{
+    font-size: 1vw;
+    height: min-content;
+}
+
 div > .fa{
-    font-size: 6.5em;
+    font-size: 14vh;
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
@@ -721,14 +1261,10 @@ div > .fa{
 }
 
 .about-item{
-  /*background-color:rgba(251,75,75,0.3);*/
-   /*rgba(6,3,170,0.3);*/
-  /*background-color: rgba(127,205,255,0.5);*/
-  height:13vh;
+  height:9vh;
   width:0;
   flex:1;
-  border: #ffffff1f 1px solid;
-  /*border-color: rgba(219, 142, 100, 0.21);*/
+  /*border: #ffffff1f 1px solid;*/
   background-color: #fd780b87;
 }
 
@@ -739,8 +1275,7 @@ div > .fa{
   display:flex;
   align-items: center;
   justify-content: center;
-  font-size: 2em;
-  /* background-color: rgba(127,205,255,0.5) */
+  font-size: 2.5vw;
 }
 
 a.about-item > div{
@@ -759,14 +1294,17 @@ a{
 
 .displayArea{
   /*background-color:rgba(0,0,0,0.3);*/
-  width:100%;
+  width:98%;
 }
 
+.displayArea h2, .displayArea h3 {
+   
+    font-size: 4vh;
+}
 .displayArea h3{
-  font-size: 2em;
+  
 }
 .displayArea p{
-  font-size:1.5em;
 }
 
 /*.displayArea div{
@@ -779,18 +1317,56 @@ a{
   display:none;
 }
 
+
+/*#resume{
+  width:65%;
+  margin-top: 5%;
+}
+*/
+
+
+.fa-container2{
+
+flex-direction: row;
+width: 100vw;
+justify-content: space-evenly;
+flex-wrap: wrap;
+}
+.fa-item2{
+  width:30vw;
+}
+
+.faDescribe3{
+font-size: 3vh !important;
+}
+.fa2{
+  color:#0080f1b0 !important;
+  font-size: 9vh !important;
+}
+
+
 .image-row-item{
-  height:6em;
-  width:6em;
+  
 }
 
 #folio{
   justify-content: space-evenly;
   align-items:center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
-
+.row{
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+}
+.column{
+  width:31%;
+}
+.hover-shadow{
+  border-radius: 8px;
+}
 
 
 
